# RuBot

./: .gitignore  .gitmodules  LICENSE  README.md  build_team_system.bash  run_team_system.bash  team_config.yaml
src/ariac_example/: CMakeLists.txt  package.xml
src/ariac_example/config/: sample_gear_conf.yaml
src/ariac_example/src/: ariac_example_node.cpp  kinematic.cpp
src/ariac_example/src/ariac_example/: ariac_example.py
