<?xml version="1.0"?>
<package format="2">
  <name>ariac_example</name>
  <version>3.0.3</version>
  <description>An adaptation of given example</description>
  <author email="ustcsiwei88@gmail.com">Siwei Feng</author>
  <maintainer email="ustcsiwei88@gmail.com">Siwei Feng</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
